Add example media

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                preload="auto"
                mediagroup='myVideoGroup'>
               <source id='ogv'
-                src="helicop.ogv"
-                type='video/ogg'>
+                src="Example.webm"
+                type='video/webm'>
             </video>
         </div>
         <div id="audios">
             <audio id="audio0" >
-            <audio id="audio1" src="robots.mp3"></audio>
-            <audio id="audio2" src="egg.mp3"></audio>
+            <audio id="audio1" src="track1.mp3"></audio>
+            <audio id="audio2" src="track2.mp3"></audio>
         </div>
         <div id='buttons'>
             <input type="range" id="slider" min="0" value="0" step="any" oninput="seek()"></input>
