--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <video id='video'
                preload="auto"
                mediagroup='myVideoGroup'>
-              <source id='ogv'
+              <source id='webm'
                 src="Example.webm"
                 type='video/webm'>
             </video>
