Change button label

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div id='buttons'>
             <input type="range" id="slider" min="0" value="0" step="any" oninput="seek()"></input>
             <button id="play" onclick="togglePlay()">Play!</button>
-            <button onclick="switchVideo(0);">Helicop</button>
-            <button onclick="switchVideo(1);">Test</button>
+            <button onclick="switchVideo(0);">Video 1</button>
+            <button onclick="switchVideo(1);">Video 2</button>
         </div>
         <div id="faders">
             <input type="range" class="vol" min="0" max="1" step="any" id="fader0" oninput="vol(0)">Film Audio</input>
